--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "spa-emulator",
-  "version": "0.0.1",
-  "description": "",
-  "main": "src/index.js",
-  "files": [
-    "src/**/*.js",
-    "src/**/*.js.map",
-    "src/**/*.d.ts"
-  ],
-  "types": "src/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "ci": "(npm run build && npm run rollup) & npm t & wait",
-    "prepublishOnly": "npm run ci && npm run rollup",
-    "test": "jest",
-    "rollup": "rollup -c"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ivkan/spa-emulator.git"
-  },
-  "keywords": [
-    "typescript",
-    "javascript",
-    "SPA",
-    "Single Page Application"
-  ],
-  "author": "Ivan Kalashnik (ivkan)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ivkan/spa-emulator/issues"
-  },
-  "homepage": "https://github.com/ivkan/spa-emulator#readme",
-  "devDependencies": {
-    "@types/jest": "^26.0.16",
-    "jest": "^26.6.3",
-    "rollup": "^2.34.1",
-    "rollup-plugin-babel-minify": "^10.0.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2"
-  }
+    "name": "spa-emulator",
+    "version": "0.0.7",
+    "description": "",
+    "main": "dist/index.js",
+    "files": [
+        "dist"
+    ],
+    "types": "dist/index.d.ts",
+    "browser": "dist/spa-emulator.min.js",
+    "scripts": {
+        "build": "tsc",
+        "ci": "(npm run build && npm run rollup) & npm t & wait",
+        "prepublishOnly": "npm run ci && npm run rollup",
+        "test": "jest",
+        "rollup": "rollup -c"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ivkan/spa-emulator.git"
+    },
+    "keywords": [
+        "typescript",
+        "javascript",
+        "SPA",
+        "Single Page Application"
+    ],
+    "author": "Ivan Kalashnik (ivkan)",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/ivkan/spa-emulator/issues"
+    },
+    "homepage": "https://github.com/ivkan/spa-emulator#readme",
+    "devDependencies": {
+        "@types/jest": "^26.0.16",
+        "jest": "^26.6.3",
+        "rollup": "^2.34.1",
+        "rollup-plugin-babel-minify": "^10.0.0",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "ts-jest": "^26.4.4",
+        "typescript": "^4.1.2"
+    }
 }
